Practical/demo-ec2.yaml
Parameters:
  NetworkStackName:
    Type: String
    Default: networkStack

Resources:
  BastionElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  BastionEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt BastionElasticIP.AllocationId
      InstanceId: !Ref BastionInstance
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !ImportValue
        Fn::Sub: ${NetworkStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 81
          ToPort: 81
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"

  EC2InstanceLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: ami-084568db4383264d4
        InstanceType: t2.micro
        BlockDeviceMappings:
          - Ebs:
              VolumeSize: 22
              VolumeType: gp2
              DeleteOnTermination: true
              Encrypted: true
            DeviceName: /dev/sda1
        MetadataOptions:
          InstanceMetadataTags: enabled
        NetworkInterfaces:
          - DeviceIndex: 0
            SubnetId: !ImportValue
              Fn::Sub: ${NetworkStackName}-PublicSubnet1ID
            AssociatePublicIpAddress: true
            Groups:
              - !Ref InstanceSecurityGroup
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: department
                Value: dev
      LaunchTemplateName: Bastion-Instance-Template
      TagSpecifications:
        - ResourceType: launch-template
          Tags:
            - Key: Stack
              Value: demo
  BastionInstance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2InstanceLaunchTemplate
        Version: !GetAtt EC2InstanceLaunchTemplate.LatestVersionNumber
      KeyName: demo-ssh-key
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          apt-get update -y
          apt install apache2 -y
          systemctl enable apache2
          systemctl start apache2
          echo '''<?php
          phpinfo();
          ?>''' > test
          cd /tmp && wget https://wordpress.org/latest.tar.gz
          tar -xvf latest.tar.gz
          cp -R wordpress /var/www/html/
          cp -R wordpress /var/www/html/
          chown -R www-data:www-data /var/www/html/wordpress/
          chmod -R 755 /var/www/html/wordpress/
          sudo mkdir /var/www/html/wordpress/wp-content/uploads
          chown -R www-data:www-data /var/www/html/wordpress/wp-content/uploads/
      Tags:
        - Key: Name
          Value: BastionVM
Outputs:
  StackBastion:
    Description: The ID of the Bastion VM
    Value: !Ref BastionInstance
    Export:
      Name: !Sub ${AWS::StackName}-BastionInstanceID
