Practical/wordpressStack.yaml
Parameters:
  NetworkStackName:
    Type: String
    Default: networkStack
  MysqlStackName:
    Type: String
    Default: mysqlStack
  MySQLDBName:
    Type: String
    Default: wordpressdb
  MySQLUser:
    Type: String
    Default: wpuser
  MySQLUserPassword:
    Type: String
    NoEcho: true
    Default: StrongPassword123!
  MySQLPrivateIP:
    Type: String
    Description: Private IP of the MySQL Server (imported from the MySQL stack output)

Resources:
  WordPressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP/SSH
      VpcId: !ImportValue
        Fn::Sub: ${NetworkStackName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  AddIngressRule1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !ImportValue
        Fn::Sub: ${MysqlStackName}-MySQLSecurityGroupID
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref WordPressSecurityGroup

  WordPressInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-084568db4383264d4
      KeyName: demo-ssh-key
      SubnetId: !ImportValue
        Fn::Sub: ${NetworkStackName}-PublicSubnet1ID
      SecurityGroupIds:
        - !Ref WordPressSecurityGroup
      Tags:
        - Key: Name
          Value: WordPressServer
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          exec > /var/log/user-data.log 2>&1
          apt-get update -y
          apt-get install -y apache2 php php-mysql wget unzip
          systemctl enable apache2
          systemctl start apache2

          cd /tmp
          wget https://wordpress.org/latest.tar.gz
          tar -xvf latest.tar.gz
          cp -R wordpress /var/www/html/
          chown -R www-data:www-data /var/www/html/wordpress/
          chmod -R 755 /var/www/html/wordpress/
          mkdir -p /var/www/html/wordpress/wp-content/uploads
          chown -R www-data:www-data /var/www/html/wordpress/wp-content/uploads/

          cp /var/www/html/wordpress/wp-config-sample.php /var/www/html/wordpress/wp-config.php
          sed -i "s/database_name_here/${MySQLDBName}/" /var/www/html/wordpress/wp-config.php
          sed -i "s/username_here/${MySQLUser}/" /var/www/html/wordpress/wp-config.php
          sed -i "s/password_here/${MySQLUserPassword}/" /var/www/html/wordpress/wp-config.php
          echo "define('DB_HOST', '${MySQLPrivateIP}');" >> /var/www/html/wordpress/wp-config.php
